--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -7,15 +7,21 @@
    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="nav-logo">CyberPath</div>
-        <ul class="nav-links">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">COURSES</a></li>
-            <li><a href="#">CONTACT</a></li>
-        </ul>
-    </nav>
+   <nav class="navbar">
+    <div class="nav-logo">CyberPath</div>
+    <ul class="nav-links">
+        <li><a href="/">HOME</a></li>
+        <li><a href="/courses">COURSES</a></li>
+        <li><a href="/about">ABOUT</a></li>
+        {% if session['username'] %}
+            <li><a href="/dashboard">DASHBOARD</a></li>
+            <li><a href="/logout">LOGOUT</a></li>
+        {% else %}
+            <li><a href="/login">LOGIN</a></li>
+            <li><a href="/register">REGISTER</a></li>
+        {% endif %}
+    </ul>
+</nav>
 
 
 
